--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Hello world</li>
+
 </ul>
 </p>
 
@@ -10067,7 +10069,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210214143146316" list="$:/ControlPanel GettingStarted" modified="20210214143146316" title="$:/StoryList">
+<div created="20210214143146316" list="[[Hello world]]" modified="20210214143146316" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -10178,6 +10180,11 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20210214145402686" modified="20210214145459180" tags="" title="Hello world">
+<pre>This is tiddly wiki
+But this editor is like shit
+I want to improve this with Zim</pre>
 </div>
 
 
