Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10070,13 +10070,13 @@ Error message and password prompt
 <div created="20210214143152715" modified="20210214143152715" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20210214145521315" modified="20210214145523819" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20210214145521315" modified="20210214150822332" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210214143146316" list="muahaha [[Hello world]]" modified="20210214145558220" title="$:/StoryList">
+<div created="20210214150755699" list="$:/ControlPanel [[Hello world]] GettingStarted" modified="20210214150825306" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -10188,10 +10188,13 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210214145402686" modified="20210214145459180" tags="" title="Hello world">
+<div created="20210214145402686" modified="20210214150815740" tags="" title="Hello world">
 <pre>This is tiddly wiki
 But this editor is like shit
-I want to improve this with Zim</pre>
+I want to improve this with Zim
+
+This is edit from android, say hi
+</pre>
 </div>
 <div created="20210214150539856" modified="20210214150550427" tags="" title="muahaha">
 <pre></pre>
