--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@ Error message and password prompt
 
 <li>Hello world</li>
 
+<li>local ip</li>
+
 <li>muahaha</li>
 
 </ul>
@@ -10076,7 +10078,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210214150755699" list="$:/ControlPanel [[Hello world]] GettingStarted" modified="20210214150825306" title="$:/StoryList">
+<div list="[[local ip]] GettingStarted" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -10195,6 +10197,9 @@ I want to improve this with Zim
 
 This is edit from android, say hi
 </pre>
+</div>
+<div created="20210218064809242" modified="20210218064819066" tags="" title="local ip">
+<pre>fe80::d01f:426d:5237:643b%3</pre>
 </div>
 <div created="20210214150539856" modified="20210214150550427" tags="" title="muahaha">
 <pre></pre>
