Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10198,8 +10198,11 @@ I want to improve this with Zim
 This is edit from android, say hi
 </pre>
 </div>
-<div created="20210218064809242" modified="20210218064819066" tags="" title="local ip">
-<pre>fe80::d01f:426d:5237:643b%3</pre>
+<div created="20210218064809242" modified="20210218065358041" tags="" title="local ip">
+<pre>fe80::d01f:426d:5237:643b%3
+
+
+2001:ee0:4001:5fd5:d01f:426d:5237:643b</pre>
 </div>
 <div created="20210214150539856" modified="20210214150550427" tags="" title="muahaha">
 <pre></pre>
